<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="localhost.project00.MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Title"
        android:layout_marginTop="12dp"
        android:textSize="@dimen/abc_text_size_medium_material" />
    
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonMovies"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textTitle"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/textTitle"
        android:text="@string/media_streamer"
        android:layout_alignEnd="@+id/textTitle"
        android:layout_marginBottom="5dp"
        android:background="@color/Udacity" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonHawk"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMovies"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/textTitle"
        android:layout_alignEnd="@id/textTitle"
        android:text="@string/Hawk"
        android:background="@color/Udacity"
        android:layout_marginBottom="5dp"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonBigger"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonHawk"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/textTitle"
        android:layout_alignEnd="@id/textTitle"
        android:text="@string/Bigger"
        android:background="@color/Udacity"
        android:layout_marginBottom="5dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonMaterial"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBigger"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/textTitle"
        android:layout_alignEnd="@id/textTitle"
        android:text="@string/Material"
        android:background="@color/Udacity"
        android:layout_marginBottom="5dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonUbiquitous"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonMaterial"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/textTitle"
        android:layout_alignEnd="@id/textTitle"
        android:text="@string/Ubiquitous"
        android:background="@color/Udacity"
        android:layout_marginBottom="5dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonCapStone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonUbiquitous"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/textTitle"
        android:layout_alignEnd="@id/textTitle"
        android:text="@string/Capstone"
        android:background="@color/Udacity"/>

</RelativeLayout>
